crates/carta/tests/snapshots/golden_writer__native__table__table-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Table
    ( "tbl" , [ "fancy" ] , [ ( "key" , "value" ) ] )
    (Caption
       Nothing
       [ Plain
           [ Str "Captioned"
           , Space
           , Str "and"
           , Space
           , Str "attributed"
           ]
       ])
    [ ( AlignDefault , ColWidthDefault )
    , ( AlignDefault , ColWidthDefault )
    ]
    (TableHead
       ( "" , [] , [] )
       [ Row
           ( "" , [] , [] )
           [ Cell
               ( "" , [] , [] )
               AlignDefault
               (RowSpan 1)
               (ColSpan 1)
               [ Plain [ Str "h1" ] ]
           , Cell
               ( "" , [] , [] )
               AlignDefault
               (RowSpan 1)
               (ColSpan 1)
               [ Plain [ Str "h2" ] ]
           ]
       ])
    [ TableBody
        ( "" , [] , [] )
        (RowHeadColumns 0)
        []
        [ Row
            ( "" , [ "odd" ] , [] )
            [ Cell
                ( "cell-id" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Plain [ Str "a" ] ]
            , Cell
                ( "" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Plain [ Str "b" ] ]
            ]
        ]
    ]
    (TableFoot ( "" , [] , [] ) [])
]
