crates/carta/tests/snapshots/golden_writer__native__table__table-caption-div.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Table
    ( "" , [] , [] )
    (Caption
       Nothing
       [ Div ( "" , [] , [] ) [ Para [ Str "Table caption" ] ] ])
    [ ( AlignDefault , ColWidthDefault )
    , ( AlignDefault , ColWidthDefault )
    ]
    (TableHead ( "" , [] , [] ) [])
    [ TableBody
        ( "" , [] , [] )
        (RowHeadColumns 0)
        []
        [ Row
            ( "" , [] , [] )
            [ Cell
                ( "" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Plain [ Str "a" ] ]
            , Cell
                ( "" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Plain [ Str "b" ] ]
            ]
        ]
    ]
    (TableFoot ( "" , [] , [] ) [])
]
